# ShadowRecon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
scripts/: example_vuln_check.lua
src/: cli.rs  discovery.rs  main.rs  os_fingerprint.rs  output.rs  scanning.rs  service.rs  types.rs
src/core/: scanner.rs
src/os_fingerprint/: mod.rs  nmap_parser.rs
src/scripting/: engine.rs  lua_engine.rs  mod.rs  scripts.rs
src/service/: mod.rs  nmap_parser.rs
src/v2/: engine.rs  mod.rs  orchestrator.rs
src/v2/network/: mod.rs  prober.rs  sniffer.rs  timing.rs
