[package]
name = "shadowrecon"
version = "0.1.0"
edition = "2021"
authors = ["pallab-js <sonowalpallabjyoti@gmail.com>"]
description = "Advanced network discovery and port/service scanning tool"
license = "MIT"
repository = "https://github.com/pallab-js/ShadowRecon"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Networking
pnet = "0.35"
socket2 = "0.5"
dns-lookup = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
ipnetwork = "0.20"

# UI
colored = "2.1"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CPU detection
num_cpus = "1.0"

# IP network parsing
ipnet = "2.0"

# Random number generation
rand = "0.8"

# Regex for pattern matching
regex = "1.10"

async-trait = "0.1.89"
